# akushon_interfaces

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml
action/: RunAction.action
msg/: Actions.msg  RunAction.msg  Status.msg
proto/: akushon.proto
srv/: GetActions.srv  PlayAction.srv  RunAction.srv  RunPose.srv  SaveActions.srv
